# pythagorean

./: .gitignore  README.md  pythagorean.cabal
exe/: Main.hs
lib/: Pythagorean.hs
test/: Tests.hs
