cabal-version: 2.2

name: pythagorean
version: 0

common language
  build-depends: base
  default-language: Haskell2010

library
  import: language
  exposed-modules: Pythagorean
  hs-source-dirs: lib

executable pythagorean
  import: language
  build-depends: pythagorean
  hs-source-dirs: exe
  main-is: Main.hs

test-suite tests
  import: language
  build-depends: tasty, tasty-hunit, pythagorean,
  hs-source-dirs: test
  main-is: Tests.hs
  type: exitcode-stdio-1.0